// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builders experimental classProperty should validate 1`] = `
Object {
  "abstract": null,
  "accessibility": null,
  "computed": false,
  "declare": null,
  "decorators": null,
  "definite": null,
  "key": Object {
    "type": "StringLiteral",
    "value": "test",
  },
  "optional": null,
  "override": false,
  "readonly": null,
  "static": false,
  "type": "ClassProperty",
  "typeAnnotation": null,
  "value": Object {
    "type": "NumericLiteral",
    "value": 1,
  },
}
`;

exports[`builders experimental classProperty should validate 2`] = `
Object {
  "abstract": null,
  "accessibility": null,
  "computed": false,
  "declare": null,
  "decorators": null,
  "definite": null,
  "key": Object {
    "type": "StringLiteral",
    "value": "test",
  },
  "optional": null,
  "override": false,
  "readonly": null,
  "static": true,
  "type": "ClassProperty",
  "typeAnnotation": null,
  "value": Object {
    "type": "NumericLiteral",
    "value": 1,
  },
}
`;
